# Fuzzy-Partition-Weighted-Classification

./: Add file -> Create new file  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  gitignore  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
assets/: README.md
configs/: debug_ablation.yaml  debug_all_truncations.yaml  debug_centroid_visualization.yaml  debug_external_classifiers.yaml  debug_small.yaml  mnist_ablation.yaml  mnist_centroid_visualization.yaml  mnist_external_classifiers.yaml  mnist_local_all_truncations.yaml  mnist_local_hpd.yaml  summary_tables.yaml
data/: README.md
docs/: README.md  reproducibility.md
models/: README.md
outputs/: README.md
paper/: README.md
scripts/: 00_prepare_mnist.py  01_run_local_classifier.py  02_run_all_truncations.py  03_run_external_classifiers.py  04_run_ablation.py  05_make_digit_centroids.py  06_make_summary_tables.py  quick_debug_run.py
src/fpwc/: __init__.py  config.py  data_mnist.py  distances.py  external_classifiers.py  feature_builder.py  hpd.py  io_utils.py  local_classifier.py  memberships.py  polynomial_basis.py  random_utils.py  report_tables.py  truncation.py  visualization.py
src/fpwc/src/fpwc/: partition.py
tests/: conftest.py  test_distances_memberships.py  test_features_metrics.py  test_local_classifier_smoke.py  test_polynomial_partition.py  test_truncation_hpd.py
